welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:20: error: type mismatch;
 found   : Unit
 required: Boolean
while(haveBaggle()== false){
^